test/mpi/errors/spawn/Makefile.sm
INCLUDES = -I../../include -I${srcdir}/../../include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

# Use extra programs to list programs that should not be built by default.
EXTRA_PROGRAMS       = 

badport_SOURCES    = badport.c
unpub_SOURCES = unpub.c
lookup_name_SOURCES = lookup_name.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o)
